<resources>
    <string name="app_name">JoinAlong</string>
    <!--ManageChat Strings-->
    <string name="create_chat_title">Create Chat</string>
    <!--ManageEvent Strings-->
    <string name="create_event_title">Create Event</string>
    <string name="date_hint">YYYY/MM/DD</string>
    <string name="time_hint">HH:MM</string>
    <!--ReportActivity Strings-->
    <string name="create_report_text">Report</string>
    <string name="reporting_message">Thanks for looking out for our community! \nPlease take some time to enter some additional details!</string>
    <string name="enter_reason_hint">Enter Reason</string>
    <string name="block_user_option">Block User</string>
    <string name="block_option">Block </string>
    <string name="reporter_name">Reporter Name</string>
    <string name="report_dont_block">Don\'t Block</string>
    <!--Subtitle Strings-->
    <string name="title_subtitle">Title</string>
    <string name="location_subtitle">Location</string>
    <string name="beginning_date_subtitle">Beginning\nDate</string>
    <string name="end_date_subtitle">End Date</string>
    <string name="visibility_subtitle">Visibility</string>
    <string name="number_of_people_subtitle">Number of People</string>
    <string name="number_of_people_hint">1234</string>
    <string name="tags_subtitle">Tags</string>
    <string name="description_subtitle">Description</string>
    <string name="add_friends_subtitle">Add Friends</string>
    <string name="add_friend_subtitle">Add Friend</string>
    <string name="reason_subtitle">Reason</string>
    <string name="block_user_subtitle">Block User</string>
    <string name="reporting_subtitle">Reporting</string>
    <!--General Strings-->
    <string name="default_empty_string"></string>
    <string name="default_create_string">Create!</string>
    <string name="default_cancel_string">Cancel</string>
    <string name="default_edit_string">Edit!</string>
    <string name="default_public_string">Public</string>
    <string name="default_private_string">Private</string>
    <string name="default_submit_string">Submit!</string>
    <string name="default_enter_description">Enter Description</string>
    <string name="default_enter_title">Enter Title</string>
    <string name="default_enter_location">Enter Location</string>
    <string name="default_enter_tags">Enter Tags</string>
    <string name="default_enter_friends">Enter Friends</string>
    <string name="default_interests">Interests</string>
    <string name="default_events">Events</string>
    <string name="default_friends">Friends</string>
    <string name="default_requests">Requests</string>
    <string name="default_search_people">Search People</string>
    <string name="default_messaging">Messaging</string>
    <string name="default_messages">Messages</string>
    <string name="default_search">Search</string>
    <string name="default_search_no_results">No Results Found</string>
    <string name="default_friends_no_results">No Friends Found</string>
    <string name="default_requests_no_results">No Requests Found</string>
    <string name="default_chats_no_results">No Chats Found</string>
    <string name="default_description">Description</string>
    <string name="default_view_reports">View Reports</string>
    <string name="default_report_type_subtitle">Report Type</string>
    <string name="default_report_target_subtitle">Report Target</string>

    <string-array name="number_of_people_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="sample_tags">
        <item>Hiking</item>
        <item>Swimming</item>
        <item>Camping</item>
        <item>Beach</item>
        <item>Biking</item>
        <item>Rock Climbing</item>
        <item>Kayaking</item>
        <item>Mountain Biking</item>
        <item>Skiing</item>
        <item>Gliding</item>
        <item>Ziplining</item>
        <item>Gardening</item>
        <item>Ice Skating</item>
        <item>Golf</item>
        <item>Jogging</item>

        <item>Board Games</item>
        <item>Cards</item>
        <item>Movies</item>
        <item>Video Games</item>
        <item>Escape Room</item>
        <item>Darts</item>

        <item>Football</item>
        <item>Basketball</item>
        <item>Archery</item>
        <item>Biking</item>
        <item>Mountain Biking</item>
        <item>Swimming</item>
        <item>Frisbee</item>
        <item>Handball</item>
        <item>Hockey</item>
        <item>Lacrosse</item>
        <item>Volleyball</item>
        <item>Skiing</item>
        <item>Spike Ball</item>
        <item>Soccer</item>
        <item>Race</item>

        <item>EDC</item>
        <item>Anime Expo</item>
        <item>Coachella</item>
        <item>Airshow</item>
        <item>Convention</item>
        <item>Marathon</item>
        <item>Arts</item>
        <item>Cultural</item>
        <item>Music</item>
        <item>Child Friendly</item>
        <item>Competition</item>
        <item>Technology</item>
        <item>Health</item>

        <item>Food</item>
        <item>Drinking</item>
        <item>Partying</item>
        <item>Bar Hopping</item>
        <item>Dancing</item>
        <item>Celebration</item>

    </string-array>

    <!--Profile Management-->
    <string name="create_profile">Create Profile</string>
    <string name="first_name_title">First Name</string>
    <string name="first_name_default">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="last_name_default">Last Name</string>
    <string name="location_title">Location</string>
    <string name="location_default">123 45th Ave, ABC City</string>
    <string name="interests_title">Interests</string>
    <string name="description_title">Description</string>
    <string name="description_default">Description</string>
    <string name="upload_profile_picture">Use Google Profile Picture</string>
    <string name="use_pic">Use</string>
    <string name="no_use_pic">Don\'t Use</string>
    <string name="create_profile_confirm">Create!</string>

    <!--Rideshare Management-->
    <string name="manage_rideshare_title">Book Rideshare</string>
    <string name="title_title">Title</string>
    <string name="title_default">Title</string>
    <string name="pickup_location_title">Pick-up Location</string>
    <string name="pickup_location_default">123 45th Ave, ABC City</string>
    <string name="destination_title">Destination</string>
    <string name="destination_default">678 90th Ave, ABC City</string>
    <string name="pickup_date_title">Pick-up Date</string>
    <string name="pickup_time_title">Pick-up Time</string>
    <string name="number_people_title">Number of People</string>
    <string name="share_cost_title">Share Cost</string>
    <string name="share_cost">Share</string>
    <string name="share_cost_no">Don\'t Share</string>
    <string name="rideshare_description_title">Description</string>
    <string name="rideshare_description_default">Description</string>
    <string name="rideshare_estimate">Get Cost Estimates</string>
    <string name="rideshare_date_hint">YYYY/MM/DD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Home Navbar-->
    <string name="home_title">Home</string>
    <string name="event_list_title">Event List</string>
    <string name="map_view_title">Event Map</string>
    <string name="card_event_name_default">Event Title</string>
    <string name="card_event_description_default">Event Description</string>
    <string name="card_event_date_default">Event Date</string>
    <string name="card_event_distance_default">Event Distance</string>

    <!--Messaging Navbar-->
    <string name="messaging_title">Messaging</string>

    <!--Events Navbar-->
    <string name="events_title">Loading...</string>

    <!--Friends Navbar-->
    <string name="friends_title">Friends</string>

    <!--Profile Navbar-->
    <string name="profile_title">Profile</string>
    <string name="logout_title">Logout</string>

    <!--View Events-->
    <string name="view_events_default_title">Event Title</string>
    <string name="view_events_organizers_title">Organizers</string>
    <string name="view_events_members_title">Members</string>
    <string name="view_events_location_title">Location</string>
    <string name="view_events_begin_date_title">Begin Date</string>
    <string name="view_events_end_date_title">End Date</string>
    <string name="join_event">Join!</string>
    <string name="book_rideshare">Book Rideshare</string>
    <string name="event_leave_title">Leave Event</string>
    <string name="event_report_title">Report Event</string>
    <string name="event_delete_title">Delete Event</string>
    <string name="event_edit_title">Edit Event</string>

    <!--TODO: idk if this is best place for id-->
    <!--LOGIN-->
    <string name="server_client_id">693671271113-s7u6caoamjhu5a7lbm9fnvgoldoupn88.apps.googleusercontent.com</string>

    <!--Rideshare Select-->
    <string name="rideshare_select_title">Select Rideshare</string>

    <!--Character Limits-->
    <integer name="max_name_length">35</integer>
    <integer name="max_title_length">64</integer>
    <integer name="max_description_length">1250</integer>
    <integer name="max_location_length">500</integer>
    <integer name="max_number_length">10</integer>

    <!--Chat Details-->
    <string name="chat_leave_title">Leave Chat</string>
    <string name="chat_edit_title">Edit Chat</string>

    <!-- Shared Prefs -->
    <string name="selected_filter_on_home">filterKey</string>

    <!-- Dark mode -->
    <string name="dark_mode_prefs">darkModeKey</string>

    <string-array name="list_of_colors_light">
        <item>#E44C4C</item>
        <item>#E7634A</item>
        <item>#E97949</item>
        <item>#EC9047</item>
        <item>#EEA645</item>
        <item>#F1BD44</item>
        <item>#F3D342</item>
        <item>#F1BD44</item>
        <item>#EEA645</item>
        <item>#EC9047</item>
        <item>#E97949</item>
        <item>#E7634A</item>
    </string-array>

    <string-array name="list_of_colors_dark">
        <item>#5CA3C9</item>
        <item>#6B97CA</item>
        <item>#7A8BCB</item>
        <item>#897FCD</item>
        <item>#9873CE</item>
        <item>#A767CF</item>
        <item>#B65BD0</item>
        <item>#A767CF</item>
        <item>#9873CE</item>
        <item>#897FCD</item>
        <item>#7A8BCB</item>
        <item>#6B97CA</item>
    </string-array>

    <!-- Animation Time -->
    <integer name="view_form_animation_time">300</integer>
</resources>