<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <ImageButton
        android:id="@+id/reportCancelButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="#0000"
        android:contentDescription="@string/default_cancel_string"
        android:minHeight="48dp"
        android:outlineAmbientShadowColor="#0000"
        app:layout_constraintBottom_toTopOf="@+id/aboveTitleGuideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/aboveTitleGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/aboveTitleGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="84dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftMarginGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightMarginGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="362dp" />

    <TextView
        android:id="@+id/reportTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_report_text"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/aboveTitleGuideline4"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline3"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline3"
        app:layout_constraintTop_toTopOf="@+id/aboveTitleGuideline3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/reportingSubtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reporting_subtitle"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline3"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline3"
        app:layout_constraintTop_toTopOf="@+id/aboveTitleGuideline4"
        app:layout_constraintVertical_bias="0.647" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/homeEventDisplayTabLayout"
        android:layout_width="314dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toTopOf="@+id/submitReportButton"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.303"
        app:tabIndicatorColor="@color/orange"
        app:tabIndicatorHeight="50dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/block_option"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/block_option" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dontblock_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_dont_block" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="225dp" />

    <TextView
        android:id="@+id/reportingMessage"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:text="@string/reporting_message"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline3"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.151" />

    <EditText
        android:id="@+id/reportReasonEditText"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/enter_reason_hint"
        android:inputType="textPersonName"
        android:text="@string/default_empty_string"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline3"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/reportReasonSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason_subtitle"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/reportReasonEditText"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline3"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="415dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="314dp" />

    <EditText
        android:id="@+id/reportDescriptionEditText"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/default_enter_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/default_empty_string"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline3"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/reportDescriptionSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/description_subtitle"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/reportDescriptionEditText"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/reportBlockSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/block_option"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/homeEventDisplayTabLayout"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/submitReportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/default_submit_string"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="682dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="546dp" />
</androidx.constraintlayout.widget.ConstraintLayout>